[FIX] many bugs.